# test_task_for_StarNAVI

./: Dockerfile  README.md  conftest.py  docker-compose.yml  example.env  main.py  pyproject.toml  pytest.ini  test.db
alembic/: env.py
alembic/versions/: 9013e49d9c89_add_cascade_delete_for_posts_and_.py  e8e284e49ed9_add_cascade_delete_orphan.py  f216942705b2_create_db.py
postgres-data/: postmaster.pid
postgres-data/base/13468/: 1247  1249  1259  16519  16522  16524  16526  16533  16534  16536  16537  16538  16539  16541  16548  16549  16556  16557  16558  16560  16567  16568  16585  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  (+17 more)
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16403  16405  16414  16422  16423  16424  16433  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  (+2 more)
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: comments.py  posts.py  users.py
src/routes/: auth.py  comments.py  posts.py  users.py
src/services/: auth.py  gemini.py  google_perspective_api.py  llama.py  scheduler.py
tests/: test.db  test_repository_comments.py  test_repository_posts.py  test_route_auth.py  test_route_comments.py  test_route_posts.py
